--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "launchBrowser": true,
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": true,
-            "startupCompany": "TKA India",
+            "startupCompany": "The Knowledge Academy Limited",
         }
     ]
 }
