--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,14 @@
             "environmentType": "Sandbox",
             "environmentName": "TKAUAT",
             // "environmentName": "TKA2",
-            "startupObjectId": 70084,
+            "startupObjectId": 25,
             "startupObjectType": "Page",
             "breakOnError": "ExcludeTry",
             "launchBrowser": true,
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": true,
             "startupCompany": "The Knowledge Academy Limited",
+            "schemaUpdateMode": "ForceSync"
         }
     ]
 }
